--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: ^2.3.3
+  build_runner: ^2.3.0
   freezed: ^2.3.2
   json_serializable: ^6.5.4
 
@@ -103,6 +103,7 @@ flutter:
 
   assets:
     - images/
+    - images/onboarding/
 
   fonts:
     - family: HelveticaNowText
